<resources>
    <string name="app_name">ConnecTogether</string>

    <!--App-wide Strings; defaults, etc.-->
    <string name="list_description">Description</string>
    <string name="home_title">Home</string>
    <string name="search">Search</string>

    <!--Home screen Strings-->
    <string-array name="home_button_names">
        <item>Connect</item>
        <item>Contacts</item>
        <item>Favorites</item>
        <item>Groups</item>
        <item>My Info</item>
        <item>Scan</item>
        <item>Settings</item>
    </string-array>

    <!--Contacts screen Strings-->
    <string name="contact_new">New Contact</string>

    <!--Contact Info screen Strings-->
    <string name="info_edit">Edit Contact Info</string>
    <string name="info_submit">Submit Changes</string>
    <string name="info_delete">Delete Contact</string>
    <string name="image_contact">Contact Image</string>

    <!--Group Screen Strings-->
    <string name="groups_new">New Group</string>

    <!--Favorites Screen Strings-->
    <string name="favorite_new">Add Favorite</string>

    <!--Edit Group Screen Strings-->
    <string name="edit_group_submit">Submit</string>
    <string name="edit_group_name">Enter Group Name</string>

    <!--Settings Screen Strings-->
    <string name="settings_title">Settings</string>
    <string name="settings_nuke">Nuke Data</string>
    <string name="settings_about">About App</string>

    <!--App Info Screen Strings-->
    <string name="app_info_title">About</string>
    <string name="app_info_devs_text">Developers:</string>
    <string name="app_info_devs_1">Aaron</string>
    <string name="app_info_devs_2">Austin</string>
    <string name="app_info_devs_3">Shane</string>
    <string name="app_info_devs_4">Tal</string>
    <string name="app_info_version_text">App Version:</string>
    <string name="app_info_version">0.3.1</string>

</resources>
