<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/info_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmsc355.contactapp.ContactsActivity">

    <include layout="@layout/toolbar_default"
        android:id="@+id/info_toolbar" />

    <ImageView
        android:id="@+id/info_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_toolbar"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_contact" />

    <EditText
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_pic"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/app_name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/info_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/info_delete"/>

    <Button
        android:id="@+id/info_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/info_delete_button"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/add_attribute"
        android:text="Add Attribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/info_edit_button"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_name"
        android:layout_above="@id/add_attribute"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

</RelativeLayout>